--- a/StartupSprint/requirements.txt
+++ b/StartupSprint/requirements.txt
@@ -7,7 +7,9 @@ django-phonenumber-field==8.0.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 idna==3.8
+mysqlclient==2.2.4
 phonenumbers==8.13.44
+pillow==10.4.0
 PyJWT==2.9.0
 python-dotenv==1.0.1
 requests==2.32.3
